# jupyter-mcp

./: .gitignore  .mcp.json  README.md  pyproject.toml  requirements.txt
jupyter_mcp/: __init__.py  kernel.py  notebooks.py  operations.py  orchestrator.py  server.py
tests/: test.py  test_all.py
