[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "jupyter-mcp"
version = "0.1.0"
description = "Agent-first MCP server for Jupyter execution and notebook operations"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "you@example.com" },
]
dependencies = [
    "fastmcp>=2.0",
    "nbformat>=5.0",
    "jupyter_client>=7.0",
    "ipykernel>=6.0",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Repository = "https://github.com/OWNER/jupyter-mcp"

[project.scripts]
jupyter-mcp = "jupyter_mcp.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["jupyter_mcp*"]
